--- a/index.html
+++ b/index.html
@@ -2,16 +2,45 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Simulador Go - Back - N</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+  <title>Simulador Go - Back - N</title>
 </head>
 <body>
-  <main>
-    <header></header>
-    <section>
-      <h2>Hola mundo!</h2>
-    </section>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+      <a class="navbar-brand" href="#">Simulador GBN (Go - Back - N)</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </nav>
+  </header>
+  <main> 
+    <div class="container-fluid">
+      <section class="simulador">
+        <div class="row">
+          <div class="col-md-12" style="height: 400px">
+            <h2>Aqui va el simulador</h2>
+          </div>
+        </div>
+      </section>
+      <section class="legenda">
+        <div class="row">
+          <div class="col-md-4 bg-primary">
+            <h2>Aqui va la legenda</h2>
+          </div>
+          <div class="col-md-8 bg-warning">
+            <h2>Algunas configuraciones de entrada al usuario (Por configurar)</h2>
+          </div>
+        </div>
+      </section>
+    </div>
   </main>
   <footer></footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
