--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+      <img src="images/mario.png" alt="Icono del proyecto" width="35">
       <a class="navbar-brand" href="#">Simulador GBN (Go - Back - N)</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
     </nav>
   </header>
   <main> 
