Full height row

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </header>
   <main>
     <div class="container-fluid">
-      <div class="row">
-        <div class="order-1 order-md-1 col-md-2 bg-warning configuracion">
+      <div class="row" style="height: 93vh;">
+        <div class="order-1 order-md-1 col-md-2 flex-grow-1 bg-warning configuracion">
           <h3>Configuración</h3>
           <form>
             <div class="form-group">
