--- a/index.html
+++ b/index.html
@@ -49,25 +49,29 @@
           <div class="simulador border border-dark">hola</div>
         </div>
         <div class="order-2 order-md-3 col-md-2 bg-light">
-          <h3>Legenda</h3>
+          <h3 class="mt-2">Legenda</h3>
           <section class="legenda row">
-            <div class="d-flex">
+            <div class="d-flex ml-3">
               <span class="cuadroLegenda bg-white"></span>
               <p>Aún no se han recibido datos</p>
             </div>
-            <div class="d-flex">
+            <div class="w-100"></div>
+            <div class="d-flex ml-3">
               <span class="cuadroLegenda bg-primary"></span>
               <p>Datos almacenados en búfer</p>
             </div>
-            <div class="d-flex">
+            <div class="w-100"></div>
+            <div class="d-flex ml-3">
               <span class="cuadroLegenda bg-success"></span>
               <p>Ack</p>
             </div>
-            <div class="d-flex">
+            <div class="w-100"></div>
+            <div class="d-flex ml-3">
               <span class="cuadroLegenda bg-warning"></span>
               <p>Transformación confirmada</p>
             </div>
-            <div class="d-flex">
+            <div class="w-100"></div>
+            <div class="d-flex ml-3">
               <span class="cuadroLegenda bg-azul"></span>
               <p>Los datos se han entregado</p>
             </div>
