--- a/index.html
+++ b/index.html
@@ -46,7 +46,56 @@
           </form>
         </div>
         <div class="order-3 order-md-2 col-md-8 border">
-          <div class="simulador border border-dark">hola</div>
+          <div class="simulador border border-dark">
+            <div id="emisor">
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+              <div class="frameE"></div>
+            </div>
+            <div id="receptor">
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+              <div class="frameR"></div>
+            </div>
+          </div>
         </div>
         <div class="order-2 order-md-3 col-md-2 bg-light">
           <h3>Legenda</h3>
