--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
         </div>
         <div class="order-3 order-md-2 col-md-8 border">
           <div class="simulador border border-dark">
-<<<<<<< HEAD
             <div id="emisor">
               <div class="frameE"></div>
               <div class="frameE"></div>
@@ -71,6 +70,9 @@
               <div class="frameE"></div>
               <div class="frameE"></div>
               <div class="frameE"></div>
+            </div>
+            <div id="desplazamiento">
+              
             </div>
             <div id="receptor">
               <div class="frameR"></div>
@@ -96,13 +98,11 @@
               <div class="frameR"></div>
               <div class="frameR"></div>
             </div>
-=======
             <div id="enviado"></div>
             <div id="espacio"></div>
             <div id="recibido"></div>
             <div class="swindow"></div>
             <div class="frame"></div>
->>>>>>> cb0bf82e0f3f4ed2fdd8612fa98bc5b9750f0753
           </div>
         </div>
         <div class="order-2 order-md-3 col-md-2 bg-light">
