--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <form>
             <div class="form-group">
               <label for="tamanioVentana" class="font-weight-bold">Tamaño de ventana: <span id="valorTamanioVentana"></span></label>
-              <input type="range" class="custom-range" min="1" max="10" step="1" id="tamanioVentana">
+              <input type="range" name="tamanioVentana" class="custom-range" min="1" max="10" step="1" id="tamanioVentana">
               <small class="form-text text-muted">Establece el tamaño de la ventana para las ventanas</small>
             </div>
             <div class="form-group">
@@ -46,12 +46,43 @@
           </form>
         </div>
         <div class="order-3 order-md-2 col-md-8 border">
-          <div class="simulador border border-dark">
-            <div id="enviado"></div>
-            <div id="espacio"></div>
-            <div id="recibido"></div>
-            <div class="swindow"></div>
-            <div class="frame"></div>
+          <div class="simulador border border-dark" style="height: 426px" id="svg">
+            <div id="root"></div>
+            <!--<div class="d-flex">
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+            </div>
+            <div class="d-flex align-items-end" style="height: 350px">
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+            </div>-->
           </div>
         </div>
         <div class="order-2 order-md-3 col-md-2 bg-light">
@@ -90,6 +121,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="js/global.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
