--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div class="row" style="height: 93vh;">
         <div class="order-1 order-md-1 col-md-2 flex-grow-1 bg-warning configuracion">
           <h3 class="mt-2">Configuración</h3>
+          <form id="form-simulador">
             <div class="form-group">
               <label for="tamanioVentana" class="font-weight-bold">Tamaño de ventana: <span id="valorTamanioVentana"></span></label>
               <input type="range" name="tamanioVentana" class="custom-range" min="1" max="10" step="1" id="tamanioVentana">
@@ -44,9 +45,9 @@
             <div class="d-flex justify-content-center">
               <button type="submit" class="btn btn-success" onclick="start()">Iniciar</button>
             </div>
+          </form>
         </div>
         <div class="order-3 order-md-2 col-md-8 border">
-<<<<<<< HEAD
           <div class="simulador border border-dark" style="height: 426px" id="svg">
             <div id="root"></div>
             <!--<div class="d-flex">
@@ -84,16 +85,12 @@
               <div class="paquete"></div>
               <div class="paquete"></div>
             </div>-->
-=======
           <div class="simulador border border-dark">
-<<<<<<< HEAD
-=======
 
             <div id="paq_1"></div>
             <div id="mov_1"></div>
             <div id="paq_2"></div>
             <div id="paq_3"></div>
->>>>>>> 495dc39892ddc10ae4309d50c311c5cf1bfe67b1
             <div id="emisor">
               <div class="frameE"></div>
               <div class="frameE"></div>
@@ -150,8 +147,8 @@
             <div id="recibido"></div>
             <div class="swindow"></div>
             <div class="frame"></div>
->>>>>>> a640e79ae422e8ba1cd67208b399caf1f638558d
           </div>
+        </div>
         </div>
         <div class="order-2 order-md-3 col-md-2 bg-light">
           <h3 class="mt-2">Legenda</h3>
@@ -188,10 +185,8 @@
   <footer></footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<<<<<<< HEAD
+  <script src="js/start.js"></script>
   <script src="js/global.js"></script>
   <script src="js/app.js"></script>
-=======
->>>>>>> a640e79ae422e8ba1cd67208b399caf1f638558d
 </body>
 </html>
