Se corrije espacio entre emisor y receptor

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           </form>
         </div>
         <div class="order-3 order-md-2 col-md-8 border">
-          <div class="simulador border border-dark" style="height: 426px" id="svg">
-            <div id="root"></div>
+          <div class="simulador border border-dark" style="height: 80vh" id="svg">
+            <!--<div id="root"></div>-->
             <!--<div class="d-flex">
               <div class="paquete bg-primary"></div>
               <div class="paquete bg-primary"></div>
@@ -85,8 +85,7 @@
               <div class="paquete"></div>
               <div class="paquete"></div>
             </div>-->
-          <div class="simulador border border-dark">
-
+          <!--<div class="simulador border border-dark">-->
             <div id="paq_1"></div>
             <div id="mov_1"></div>
             <div id="paq_2"></div>
@@ -115,9 +114,7 @@
               <div class="frameE"></div>
               <div class="frameE"></div>
             </div>
-            <div id="desplazamiento">
-              
-            </div>
+            <div id="desplazamiento"></div>
             <div id="receptor">
               <div class="frameR"></div>
               <div class="frameR"></div>
@@ -142,13 +139,12 @@
               <div class="frameR"></div>
               <div class="frameR"></div>
             </div>
-            <div id="enviado"></div>
+            <!--<div id="enviado"></div>
             <div id="espacio"></div>
             <div id="recibido"></div>
             <div class="swindow"></div>
-            <div class="frame"></div>
+            <div class="frame"></div>-->
           </div>
-        </div>
         </div>
         <div class="order-2 order-md-3 col-md-2 bg-light">
           <h3 class="mt-2">Legenda</h3>
