--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
         </div>
         <div class="order-3 order-md-2 col-md-8 border">
           <div class="simulador border border-dark">
-
-            <div id="paq_1"></div>
+            <div class="paquetes">
+              <div id="paq_1"></div>
+              <div id="paq_2"></div>
+            </div>
+            <!--<div id="paq_1"></div>
             <div id="mov_1"></div>
             <div id="paq_2"></div>
-            <div id="paq_3"></div>
+            <div id="paq_3"></div>-->
             <div id="emisor">
               <div class="frameE"></div>
               <div class="frameE"></div>
@@ -142,5 +145,6 @@
   <footer></footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
