--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           </form>
         </div>
         <div class="order-3 order-md-2 col-md-8 border">
-          <div class="simulador border border-dark" style="height: 80vh" id="svg">
+          <div class="simulador border border-dark" style="height: 90%" id="svg">
             <!--<div id="root"></div>-->
-            <!--<div class="d-flex">
+            <div class="d-flex">
               <div class="paquete bg-primary"></div>
               <div class="paquete bg-primary"></div>
               <div class="paquete bg-primary"></div>
@@ -68,7 +68,7 @@
               <div class="paquete bg-primary"></div>
               <div class="paquete bg-primary"></div>
             </div>
-            <div class="d-flex align-items-end" style="height: 350px">
+            <div class="d-flex align-items-end" style="height: 85%">
               <div class="paquete"></div>
               <div class="paquete"></div>
               <div class="paquete"></div>
@@ -84,9 +84,9 @@
               <div class="paquete"></div>
               <div class="paquete"></div>
               <div class="paquete"></div>
-            </div>-->
+            </div>
           <!--<div class="simulador border border-dark">-->
-            <div id="paq_1"></div>
+            <!--<div id="paq_1"></div>
             <div id="mov_1"></div>
             <div id="paq_2"></div>
             <div id="paq_3"></div>
@@ -138,7 +138,7 @@
               <div class="frameR"></div>
               <div class="frameR"></div>
               <div class="frameR"></div>
-            </div>
+            </div>-->
             <!--<div id="enviado"></div>
             <div id="espacio"></div>
             <div id="recibido"></div>
