--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
-  <script src="js/jquery-1.12.4.min.js"></script>
-  <script src="js/start.js"></script>
   <title>Simulador Go - Back - N</title>
 </head>
 <body>
@@ -49,10 +47,11 @@
         </div>
         <div class="order-3 order-md-2 col-md-8 border">
           <div class="simulador border border-dark" style="height: 90%" id="svg">
-            <!--<div class="paquetes">
+            
+            <div class="paquetes">
               <div id="paq_1"></div>
               <div id="paq_2"></div>
-            </div>-->
+            </div>
             <!--<div id="paq_1"></div>
           
             <div id="root"></div>-->
@@ -74,7 +73,7 @@
               <div class="paquete bg-primary"></div>
               <div class="paquete bg-primary"></div>
             </div>
-            <div class="d-flex align-items-end" style="height: 90%">
+            <div class="d-flex align-items-end" style="height: 85%">
               <div class="paquete"></div>
               <div class="paquete"></div>
               <div class="paquete"></div>
@@ -185,6 +184,7 @@
     </div>
   </main>
   <footer></footer>
+  <script src="js/jquery-1.12.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="js/start.js"></script>
