Al iniciar la simulacion se bloquea el form y se elimina un paquete

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           <div class="simulador border border-dark" style="height: 90%" id="svg">
             
             <div class="paquetes">
-              <div id="paq_1"></div>
-              <div id="paq_2"></div>
+              <div id="paq_1" class="paquete bg-primary"></div>
+              <div id="paq_2" class="paquete bg-primary"></div>
             </div>
             <!--<div id="paq_1"></div>
           
