Se inicia trabajo aparte

--- a/index.html
+++ b/index.html
@@ -47,15 +47,23 @@
         </div>
         <div class="order-3 order-md-2 col-md-8 border">
           <div class="simulador border border-dark" style="height: 90%" id="svg">
-            
-            <div class="paquetes">
+            <!--<div class="paquetes">
               <div id="paq_1" class="paquete bg-primary"></div>
               <div id="paq_2" class="paquete bg-primary"></div>
-            </div>
+            </div>-->
             <!--<div id="paq_1"></div>
-          
             <div id="root"></div>-->
-            <div class="d-flex">
+            <div class="d-flex paquetes">
+              <div class="paquete bg-primary"></div>
+              <div id="paq_1" class="paquete bg-warning"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
+              <div class="paquete bg-primary"></div>
               <div class="paquete bg-primary"></div>
               <div class="paquete bg-primary"></div>
               <div class="paquete bg-primary"></div>
@@ -74,6 +82,16 @@
               <div class="paquete bg-primary"></div>
             </div>
             <div class="d-flex align-items-end" style="height: 85%">
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
+              <div class="paquete"></div>
               <div class="paquete"></div>
               <div class="paquete"></div>
               <div class="paquete"></div>
