Se agregan los estilos finales

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="css/jquery-ui.min.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootswatch.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Simulador Go - Back - N</title>
 </head>
 <body onload="init();" class="mobile">
 	<header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-      <img src="images/mario.png" alt="Icono del proyecto" width="35">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <img src="images/mario.png" alt="Icono del proyecto" width="40">
       <a class="navbar-brand" href="#">Simulador GBN (Go - Back - N)</a>
     </nav>
   </header>
   <main>
     <div class="container-fluid">
       <div class="row" style="height: 93vh;">
-        <div class="order-1 order-xl-1 col-sm-8 col-lg-9 col-xl-3 flex-grow-1 bg-warning configuracion">
+        <div class="order-1 order-lg-1 col-sm-8 col-lg-2 col-xl-3 flex-grow-1 bg-light border-light border-warning configuracion">
           <form class="config">
             <h3 class="mt-2">Configuración</h3>
             <div class="form-item form-group disable">
@@ -47,17 +47,17 @@
               <small>El número de paquetes que la capa superior intenta enviar por minuto</small>
             </div>
             <div class="d-flex justify-content-center mt-3">
-              <input type="button" class="btn btn-success" onclick="contr.startStop();" id="start" value="Iniciar">
+              <input type="button" class="btn btn-warning" onclick="contr.startStop();" id="start" value="Iniciar">
             </div>
           </form>
         </div>
-        <div class="order-3 order-xl-2 col-xl-7 py-3 border">
+        <div class="order-3 order-lg-2 col-lg-8 col-xl-7 py-3 border">
           <div id="svg" class="simulation">
             <div id="root">
             </div>
           </div>
         </div>
-        <div class="order-2 order-xl-3 col-sm-4 col-lg-3 col-xl-2 bg-light">
+        <div class="order-2 order-lg-3 col-sm-4 col-lg-2 col-xl-2 bg-light border-left border-light">
           <h3 class="mt-2">Legenda</h3>
             <div class="legend">
               <section class="legenda row">
